add worker info endpoint
